# Oracolo

./: .gitignore  README.md  docker-compose.yml  docs.html  mkdocs.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  release.yml  tests.yml
OcchioOnniveggente/: CMakeLists.txt  README.md  docs.html  requirements.txt  run.ps1  settings.local.yaml  settings.yaml
OcchioOnniveggente/DataBase/: __init__.py  conversation_store.py
OcchioOnniveggente/data/: domande_oracolo.json
OcchioOnniveggente/data/filters/: en_blacklist.txt  it_blacklist.txt
OcchioOnniveggente/data/logs/: dialoghi.csv
OcchioOnniveggente/scripts/: convert_to_onnx.py  ingest_docs.py  realtime_dummy_server.py  realtime_server.py
OcchioOnniveggente/src/: CMakeLists.txt  __init__.py  __main__.py  audio.py  audio_device.py  cache.py  chat.py  cli.py  config.py  conversation.py  dialogue.py  docs_api.py  docstore.py  domain.py  event_bus.py  exceptions.py  filters.py  frontend.py  hotword.py  lights.py  llm_batcher.py  local_audio.py  local_llm.py  logging_utils.py  main.py  metadata_store.py  metrics.py  openai_async.py  oracle.py  plugins.py  profile_utils.py  question_session.py  rate_limiter.py  realtime_oracolo.py  realtime_ws.py  retrieval.py  service_container.py  task_queue.py  ui.py  ui_controller.py  (+7 more)
OcchioOnniveggente/src/ai/: __init__.py  document_db.py
OcchioOnniveggente/src/app/: audio_setup.py  run.py  startup.py
OcchioOnniveggente/src/audio/: __init__.py  hotword.py  local_audio.py  processing.py  protocols.py  recording.py
OcchioOnniveggente/src/conversation/: __init__.py  language.py  questions.py  state.py
OcchioOnniveggente/src/frontend/: __init__.py  controller.py  state.py
OcchioOnniveggente/src/frontend_qt/: CMakeLists.txt  DocumentTable.qml  MainWindow.qml  RealtimeClient.cpp  RealtimeClient.h  RulesPanel.qml  main.cpp
OcchioOnniveggente/src/frontend_qt/qml/: MainWindow.qml  RulesPanel.qml
OcchioOnniveggente/src/hardware/: audio.py  wled_client.py
OcchioOnniveggente/src/oracle/: __init__.py  (+3 more)
atoms_ui/: README.md  main.py
atoms_ui/qml/: Main.qml  Theme.qml
docs/: api.md  deploy.md  faq.md  index.md  install.md  security.md  settings.schema.json  versioning.md
docs/tutorials/: document_ingestion.md  llm_config.md  stt_tts.md
oracolo-qml/: CMakeLists.txt
oracolo-qml/src/: RealtimeClient.cpp  RealtimeClient.h  main.cpp
oracolo-qml/src/qml/: Main.qml  Palette.js
oracolo-qml/src/qml/components/: ChatBubble.qml  DocumentsPanel.qml  NeonCard.qml  OrbGlow.qml  VUMeter.qml  Waveform.qml
oracolo-qml/src/qml/pages/: ChatPage.qml  DocumentsPage.qml  SettingsPage.qml
scripts/: analyze_logs.py  generate_settings_schema.py
src/: __init__.py
tests/: test_async_tts.py  test_audio_device_module.py  test_audio_missing_sounddevice.py  test_audio_utils.py  test_cache_module.py  test_chat_memory.py  test_cli_utils.py  test_config.py  test_context_compression.py  test_conversation_flow.py  test_conversation_history.py  test_conversation_manager.py  test_docstore.py  test_domain.py  test_domande_oracolo_json.py  test_embed_cache.py  test_embed_timeout.py  test_exports.py  test_extract_summary.py  test_filters.py  test_hotword_prefix.py  test_ingest_reindex.py  test_language_persistence.py  test_local_audio_interfaces.py  test_logging.py  test_metadata_store.py  test_metrics.py  test_modes.py  test_oracle.py  test_oracle_answer.py  test_oracle_cache.py  test_persona.py  test_profile_domain_settings.py  test_profile_utils_module.py  test_profiles_custom.py  test_question_metadata.py  test_question_session.py  test_question_session_cycle.py  test_question_session_persistence.py  test_random_question.py  (+16 more)
(+45 files in other folders)
