[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "OcchioOnniveggente"
dynamic = ["version"]
description = "Voice assistant package"
readme = "README.md"
requires-python = ">=3.10"

[project.entry-points."oracolo.stt"]

local = "OcchioOnniveggente.src.hardware.audio:create_local_stt"

[project.entry-points."oracolo.tts"]
local = "OcchioOnniveggente.src.hardware.audio:create_local_tts"

local = "OcchioOnniveggente.src.audio.protocols:create_local_stt"

[project.entry-points."oracolo.tts"]
local = "OcchioOnniveggente.src.audio.protocols:create_local_tts"


[project.entry-points."oracolo.llm"]
openai = "OcchioOnniveggente.src.openai_async:create_openai_llm"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
